ahora con jacoco

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>Library</name>
-	<comment>Project Junit-library-project created by Buildship.</comment>
+	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -22,7 +22,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1670973898243</id>
+			<id>1670976912346</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
