--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
 
 group 'org.bank'
 version '1.0-SNAPSHOT'
+apply plugin: 'eclipse'
+apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
@@ -15,18 +17,33 @@ dependencies {
     implementation 'com.google.guava:guava:30.1-jre'
     implementation 'org.beryx:text-io:3.4.1'
     implementation "javax.xml.bind:jaxb-api:2.3.0"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
+jacoco {
+    toolVersion = "0.8.8"
+    reportsDir = file("$buildDir/customJacocoReportDir")
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+        csv.enabled = true
+    }
+    }
+
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
+
 
 jar {
     manifest {
         attributes(
-                'Main-Class': 'Main'
+                'Main-Class': 'bibloteca.Main'
         )
     }
 }
